Don't use a non-zero argument for __builtin_frame_address

__builtin_frame_address with a non-zero argument is unsafe and rejected by
newer gcc.  Since it doesn't seem to impact the stacktrace, don't bother
with gymnastics to unwind to a different frame for starting.

PR:		kern/220118
MFC after:	2 weeks

Former-commit-id: 2f333dda49b5983bb97c467df94df677eaa20459